--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "module": "ESNext",
     "lib": ["ES2022", "DOM", "DOM.Iterable"],
     "types": ["vite/client"],
+    "ignoreDeprecations":"6.0",
 
     /* Bundler mode */
     "moduleResolution": "bundler",
