--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "e-shop",
+  "name": "stackshop-app",
   "private": true,
   "type": "module",
   "scripts": {
@@ -19,31 +19,34 @@
   "dependencies": {
     "@base-ui/react": "^1.0.0",
     "@fontsource-variable/figtree": "^5.2.10",
-    "@hugeicons/core-free-icons": "^3.1.1",
-    "@hugeicons/react": "^1.1.4",
-    "@tailwindcss/vite": "^4.0.6",
+    "@hugeicons/core-free-icons": "^2.0.0",
+    "@hugeicons/react": "^1.1.1",
+    "@radix-ui/react-slot": "^1.2.4",
+    "@tailwindcss/vite": "^4.1.18",
     "@tanstack/react-devtools": "^0.7.0",
-    "@tanstack/react-query": "^5.90.16",
+    "@tanstack/react-form": "^1.27.4",
+    "@tanstack/react-query": "^5.90.12",
     "@tanstack/react-router": "^1.132.0",
     "@tanstack/react-router-devtools": "^1.132.0",
     "@tanstack/react-router-ssr-query": "^1.131.7",
     "@tanstack/react-start": "^1.132.0",
     "@tanstack/router-plugin": "^1.132.0",
+    "@tanstack/vue-form": "^1.27.7",
+    "appwrite": "^21.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.45.1",
-    "lucide-react": "^0.561.0",
+    "lucide-react": "^0.544.0",
     "nitro": "latest",
     "pg": "^8.16.3",
     "postgres": "^3.4.7",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "shadcn": "^3.6.2",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.0.6",
-    "tw-animate-css": "^1.4.0",
-    "vite-tsconfig-paths": "^6.0.2"
+    "vite-tsconfig-paths": "^5.1.4",
+    "zod": "^4.3.5"
   },
   "devDependencies": {
     "@tanstack/devtools-vite": "^0.3.11",
@@ -58,6 +61,8 @@
     "drizzle-kit": "^0.31.8",
     "jsdom": "^27.0.0",
     "prettier": "^3.5.3",
+    "tsx": "^4.21.0",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5.7.2",
     "vite": "^7.1.7",
     "vitest": "^3.0.5",
